--- a/react/index.html
+++ b/react/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/star.png" />
+    <link rel="icon" type="image/png" href="/ContractBot.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ContractBot</title>
   </head>
